--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-numpy==1.19.2
-jax==0.3.23
-jaxlib==0.3.22
+numpy==1.21.5
+jax==0.3.21
+jaxlib==0.3.20
 timm==0.6.11
 matplotlib==3.5.3
+tensorflow-datasets==4.6.0
+tqdm==4.64.0
